--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </main>
 
         <footer>
-            <p>Email Resource Validator &copy; 2025 | <a href="https://github.com/" target="_blank" rel="noopener noreferrer">GitHub Repository</a></p>
+            <p>Email Resource Validator &copy; 2025 | <a href="https://github.com/sathiqali/email-reource-checker" target="_blank" rel="noopener noreferrer">GitHub Repository</a></p>
             <p class="disclaimer">This tool is for testing purposes only. CORS policies may limit the ability to validate some external resources.</p>
         </footer>
     </div>
